# logos-wallet-module

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_wallet_lib.sh  fix_wallet_install_name.cmake  flake.nix  metadata.json  wallet_module_interface.h  wallet_module_plugin.cpp  wallet_module_plugin.h
.github/workflows/: ci.yml
nix/: default.nix  go-wallet-lib.nix  go-wallet-sdk-lib.nix  include.nix  lib.nix  package.nix
scripts/: compile.sh
src/: main.cpp  wallet_module_impl.cpp  wallet_module_impl.h  wallet_module_interface.h  wallet_service.cpp  wallet_service.h
tests/: CMakeLists.txt  test_wallet.cpp  test_wallet_integration.cpp
tests/mocks/: mock_gowalletsdk.cpp
tests/stubs/lib/: libgowalletsdk.h
